# wiznet_can_gateway

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
hardware/fusion360/case/: Body_220412.step  Body_220412.stl  Lid_220412.step  Lid_220412.stl
hardware/gerber/: copper_bottom.gbr  copper_top.gbr  drill_1_16.xln  gerber_job.gbrjob  profile.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr
src/: CMakeLists.txt  main.cpp  main.h
src/ap/: ap.cpp  ap.h  ap_def.h
src/ap/include/: EthernetManager.hpp  EventSocket.hpp  can_driver.h  dhcp_test.h  loopback_test.h
src/ap/src/: EthernetManager.cpp  EventSocket.cpp  can_driver.cpp  dhcp_test.cpp  loopback_test.cpp
src/bsp/: bsp.c  bsp.h
src/common/: def.h
src/common/core/: qbuffer.c  qbuffer.h
src/common/hw/include/: button.h  can.h  cli.h  cmd_can.h  i2c.h  lcd.h  led.h  log.h  mcp2515.h  spi.h  uart.h
src/common/hw/include/lcd/: ili9341.h  ili9341_regs.h  ssd1306.h  ssd1306_regs.h
src/hw/: hw.c  hw.h  hw_def.h
src/hw/driver/: button.c  can.c  cli.c  cmd_can.c  gpio.c  i2c.c  lcd.c  led.c  log.c  mcp2515.c  spi.c  uart.c
src/hw/driver/lcd/: ili9341.c  ssd1306.c
src/lib/RP2040-HAT-C/: CMakeLists.txt  rp2040_hat_c-patch.cmake
src/lib/RP2040-HAT-C/port/ioLibrary_Driver/: w5x00_spi.h
tools/: down.py
